<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Gallery">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailsActivity">

        <TextView
            android:id="@+id/film_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/avengers_endgame"
            android:textColor="#921AC7"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/thumbnail_image"
            app:layout_constraintTop_toTopOf="@+id/thumbnail_image" />

        <TextView
            android:id="@+id/release_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/released"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/film_title_text"
            app:layout_constraintTop_toBottomOf="@+id/film_title_text" />

        <TextView
            android:id="@+id/release_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/date"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/release_text"
            app:layout_constraintTop_toTopOf="@+id/release_text" />

        <ImageView
            android:id="@+id/banner_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/banner"
            android:scaleType="centerCrop"
            android:src="@drawable/endgame_background"
            app:layout_constraintDimensionRatio="H, 16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:adjustViewBounds="true" />

        <ImageView
            android:id="@+id/thumbnail_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/thumbnail"
            android:src="@drawable/endgame_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner_image" />

        <Button
            android:id="@+id/show_trailer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/trailer_button"
            app:layout_constraintStart_toStartOf="@+id/release_text"
            app:layout_constraintTop_toBottomOf="@+id/release_text" />

        <TextView
            android:id="@+id/overview_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overview"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/thumbnail_image"
            app:layout_constraintTop_toBottomOf="@+id/thumbnail_image" />

        <TextView
            android:id="@+id/overview_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@string/overview_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/overview_title_text"
            app:layout_constraintTop_toBottomOf="@+id/overview_title_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
